fix: fixed jwt config, and allowed requests, and also fixed logic when registering